pesbuk/mysql-sosmed-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mysql-sosmed
  labels:
    app:  mysql-sosmed
spec:
  selector:
    matchLabels:
      app: mysql-sosmed
  replicas: 1
  template:
    metadata:
      labels:
        app:  mysql-sosmed
    spec:
      containers:
      - name:  mysql-sosmed
        image:  sekolahdevopscilsy/mysql-sosmed
        ports:
        - containerPort:  3306
