pesbuk/pesbuk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pesbuk-deploy
  labels:
    app:  pesbuk-deploy
spec:
  selector:
    matchLabels:
      app: pesbuk-deploy
  replicas: 1
  template:
    metadata:
      labels:
        app:  pesbuk-deploy
    spec:
      volumes:
        - name: config-fb
          configMap:
            name: configmap-pesbuk
      containers:
        - name: php-pesbuk
          image: sekolahdevopscilsy/php-sosmed
          ports:
          - containerPort: 80
          volumeMounts:
            - name: config-fb
              mountPath: "/var/www/html/config.php"
              subPath: "config.php"
